Attempt to add overflow-x scroll.

--- a/hoverxref/_static/css/tooltipster.custom.css
+++ b/hoverxref/_static/css/tooltipster.custom.css
@@ -19,4 +19,5 @@
 
 .tooltipster-sidetip.tooltipster-shadow.tooltipster-shadow-custom .tooltipster-content .headerlink {
     visibility: hidden;
+    overflow-x: scroll;
 }
